--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World!
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
+    <title>NSMB Central</title>
+  </head>
+<div>
+	<nav class="container-fluid">
+    	<ul>
+        	<li><img src="/images/NSMBCentral_Animated.gif" width="10%"></li>
+    	</ul>
+    	<ul>
+        	<li><a href="/index.html">Home</a></li>
+        	<li><a href="https://wiki.nsmbcentral.net">Wiki</a></li>
+        	<li><a href="https://discord.gg/x7gr3M9" role="button">Discord</a></li>
+    	</ul>
+	</nav>
+</div>
+<div>
+  <body>
+    <main class="container">
+    	<article><img src="/images/Banner.png" alt="A banner for NSMB Central"></article>
+      	<h1>Welcome!</h1>
+    	<p>Welcome to the homepage of NSMB Central!</p>
+    	<p>NSMB Central is a <a href="https://discord.gg/x7gr3M9">Discord</a> server dedicated to the 2006 Nintendo DS Game, New Super Mario Bros. DS.</p>
+    </main>
+  </body>
+</div>
+</html>
