Improve the styling of the pages

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <div>
 	<nav class="container-fluid">
     	<ul>
-        	<li><img src="/images/NSMBCentral_Animated.gif" width="10%"></li>
+        	<li><img src="/images/NSMB_Central_Logo.png" width="10%"></li>
     	</ul>
     	<ul>
-        	<li><a href="/index.html">Home</a></li>
+        	<li><a href="/">Home</a></li>
+        	<li><a href="mods/">Mods</a></li>
         	<li><a href="https://wiki.nsmbcentral.net">Wiki</a></li>
         	<li><a href="https://discord.gg/x7gr3M9" role="button">Discord</a></li>
     	</ul>
@@ -21,10 +22,10 @@
 <div>
   <body>
     <main class="container">
-    	<article><img src="/images/Banner.png" alt="A banner for NSMB Central"></article>
       	<h1>Welcome!</h1>
     	<p>Welcome to the homepage of NSMB Central!</p>
-    	<p>NSMB Central is a <a href="https://discord.gg/x7gr3M9">Discord</a> server dedicated to the 2006 Nintendo DS Game, New Super Mario Bros. DS.</p>
+    	<p>NSMB Central is a <a href="https://discord.gg/x7gr3M9">Discord</a> server dedicated to modding the 2006 Nintendo DS Game, New Super Mario Bros. DS.</p>
+		<article><img src="/images/NSMB_Central_Banner.png" alt="A banner for NSMB Central"></article>
     </main>
   </body>
 </div>
