An Ordinary NSMB Mod
v1.0

--- a/mods/index.html
+++ b/mods/index.html
@@ -28,6 +28,7 @@
             <br>
             <ul>
 			<li><a href="Super Mario Bros.: The Missing Lands/">Super Mario Bros.: The Missing Lands</a></li>
+			<li><a href="An Ordinary NSMB Mod/">An Ordinary NSMB Mod</a></li>
             </ul>
         </article>
     </main>
