--- a/index.html
+++ b/index.html
@@ -1,32 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
-    <title>NSMB Central</title>
-  </head>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/pico.jade.min.css" />
+	<link rel="stylesheet" href="css/styles.css" />
+	<title>NSMB Central</title>
+</head>
+<div id="navbar"></div>
 <div>
-	<nav class="container-fluid">
-    	<ul>
-        	<li><img src="/images/NSMB_Central_Logo.png" width="10%"></li>
-    	</ul>
-    	<ul>
-        	<li><a href="/">Home</a></li>
-        	<li><a href="mods/">Mods</a></li>
-        	<li><a href="https://wiki.nsmbcentral.net">Wiki</a></li>
-        	<li><a href="https://discord.gg/x7gr3M9" role="button">Discord</a></li>
-    	</ul>
-	</nav>
+	<main class="container">
+		<h1>Welcome!</h1>
+		<p>Welcome to the homepage of NSMB Central!</p>
+		<p>NSMB Central is a <a href="https://discord.gg/x7gr3M9">Discord</a> server dedicated to modding the 2006 Nintendo DS Game, New Super Mario Bros. DS.</p>
+		<article><img src="/assets/images/NSMB_Central_Banner.png" alt="A banner for NSMB Central"></article>
+	</main>
 </div>
-<div>
-  <body>
-    <main class="container">
-      	<h1>Welcome!</h1>
-    	<p>Welcome to the homepage of NSMB Central!</p>
-    	<p>NSMB Central is a <a href="https://discord.gg/x7gr3M9">Discord</a> server dedicated to modding the 2006 Nintendo DS Game, New Super Mario Bros. DS.</p>
-		<article><img src="/images/NSMB_Central_Banner.png" alt="A banner for NSMB Central"></article>
-    </main>
-  </body>
-</div>
+<script src="/js/load-nav.js"></script>
 </html>
