--- a/mods_template.html
+++ b/mods_template.html
@@ -3,23 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/pico.jade.min.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Mods List</title>
-    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
 </head>
-
-<body>
-    <nav class="container-fluid">
-        <ul>
-            <li><img src="/images/NSMB_Central_Logo.png" width="10%"></li>
-        </ul>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="mods/">Mods</a></li>
-            <li><a href="https://wiki.nsmbcentral.net">Wiki</a></li>
-            <li><a href="https://discord.gg/x7gr3M9" role="button">Discord</a></li>
-        </ul>
-    </nav>
-    
+<div id="navbar"></div>
     <main class="container-fluid">
         <article>
             <h1>Available Mods</h1>
@@ -31,5 +19,5 @@
             </ul>
         </article>
     </main>
-</body>
 </html>
+<script src="/js/load-nav.js"></script>
