--- a/mods_template.html
+++ b/mods_template.html
@@ -8,16 +8,47 @@
     <title>Mods List</title>
 </head>
 <div id="navbar"></div>
-    <main class="container-fluid">
-        <article>
-            <h1>Available Mods</h1>
-            <p>Any mod published to the site can be seen here.</p>
-            <hr>
-            <br>
-            <ul>
+<main class="container-fluid">
+    <article>
+        <h1>Available Mods</h1>
+        <p>Any mod published to the site can be seen here.</p>
+        <hr>
+        <br>
+        <ul>
 <!-- MOD_LIST -->
-            </ul>
-        </article>
-    </main>
+        </ul>
+    </article>
+</main>
+
+<!-- Dialog Structure -->
+<dialog id="contentDialog">
+    <button id="closeDialog">Close</button>
+    <div id="dialogContent"></div>
+</dialog>
 </html>
 <script src="/js/load-nav.js"></script>
+<script>
+    // JavaScript to load mod content into the dialog
+    document.addEventListener("DOMContentLoaded", function() {
+        const dialog = document.getElementById("contentDialog");
+        const dialogContent = document.getElementById("dialogContent");
+        const closeDialog = document.getElementById("closeDialog");
+
+        document.querySelectorAll(".dialog-link").forEach(link => {
+            link.addEventListener("click", function(event) {
+                event.preventDefault();
+                fetch(link.getAttribute("href"))
+                    .then(response => response.text())
+                    .then(data => {
+                        dialogContent.innerHTML = data;
+                        dialog.showModal();
+                    });
+            });
+        });
+
+        closeDialog.addEventListener("click", function() {
+            dialog.close();
+            dialogContent.innerHTML = "";  // Clear content when closing
+        });
+    });
+</script>
