--- a/mods/index.html
+++ b/mods/index.html
@@ -54,7 +54,6 @@
 <script src="/js/load-nav.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script>
-    // JavaScript to load and render Markdown in the dialog with scrolling and scrollbar reset
     document.addEventListener("DOMContentLoaded", function() {
         const dialog = document.getElementById("contentDialog");
         const dialogContent = document.getElementById("dialogContent");
@@ -66,16 +65,20 @@
                 fetch(link.getAttribute("href"))
                     .then(response => response.text())
                     .then(data => {
-                        // Convert Markdown to HTML using marked
-                        const htmlContent = marked.parse(data);
-                        dialogContent.innerHTML = htmlContent;
+                        const tempDiv = document.createElement("div");
+                        tempDiv.innerHTML = data;
+
+                        const bodyContent = tempDiv.querySelector("body");
+                        const markdownContent = bodyContent ? bodyContent.innerHTML : data;
+
+                        dialogContent.innerHTML = marked.parse(markdownContent);
+                        dialogContent.scrollTop = 0;
                         dialog.showModal();
                     });
             });
         });
 
         closeDialog.addEventListener("click", function() {
-            dialogContent.scrollTop = 0;
             dialog.close();
             dialogContent.innerHTML = "";
         });
