--- a/mods/New Mini SMB/index.html
+++ b/mods/New Mini SMB/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
+
+	<style>
+		body {
+  background-image: url("");
+}
+	</style>
+	
   <head>
-		<title>New Mini SMB</title>
-	</head>
+
+	  <title>New Mini SMB</title>
+</head>
 
 	<body>
 
