--- a/mods/New Mini SMB/index.html
+++ b/mods/New Mini SMB/index.html
@@ -3,7 +3,7 @@
 
 	<style>
 		body {
-  background-image: url("");
+  background-image: url("https://github.com/NotTheOnlyRph/NSMBC.github.io/blob/main/mods/New%20Mini%20SMB/assets/MKDS%20menu.png");
 }
 	</style>
 	
