--- a/mods/New Mini SMB/index.html
+++ b/mods/New Mini SMB/index.html
@@ -1,21 +1,152 @@
 <!DOCTYPE html>
 <html>
 
+	
+	
 	<style>
+	
+	
+		
+		@font-face {
+			font-family: Mario;
+			src: url('https://raw.githubusercontent.com/NotTheOnlyRph/NSMBC.github.io/refs/heads/main/mods/New%20Mini%20SMB/assets/SuperMario256.ttf') format('truetype');
+			font-weight: normal;
+			font-style: normal;
+		}
+
+		@font-face {
+			font-family: Ubuntu;
+			src: url('https://raw.githubusercontent.com/NotTheOnlyRph/NSMBC.github.io/refs/heads/main/mods/New%20Mini%20SMB/assets/Ubuntu-Medium.ttf') format('truetype');
+			font-weight: normal;
+			font-style: normal;
+		}
+
+		.button {
+			background-color: #FFFFFF;
+			border: none;
+			padding: 20px;
+			padding-bottom: 10px;
+			text-align: center;
+			display: inline-block;
+			margin: 4px 2px;
+			cursor: pointer;
+			border-radius: 12px;
+			font-family: Mario;
+			font-size: 500%;
+			font-family: Mario;
+			transition-duration: 0.4s;
+		}
+
 		body {
-  background-image: url("https://github.com/NotTheOnlyRph/NSMBC.github.io/blob/main/mods/New%20Mini%20SMB/assets/MKDS%20menu.png");
-}
+			text-align: center;
+			color: white;
+			background: url("https://raw.githubusercontent.com/NotTheOnlyRph/NSMBC.github.io/refs/heads/main/mods/New%20Mini%20SMB/assets/MKDS%20menu.png") no-repeat center fixed;
+			background-size: cover;
+		}
+		
+		img {
+			max-width: 100%;
+			height: auto;
+			}
+		
+		div {
+			width: 90%;
+			text-align: center;
+			/*background-color: rgba(255, 255, 255, 0.4);*/
+			margin: 0 auto;
+			align-content: center;
+			padding: 5px;
+			border-radius: 15px;
+			}
+			
+		h1 {
+			font-family: Mario;
+			font-size: 600%;
+		}
+		
+		h2 {
+			font-family: Mario;
+			font-size: 400%;
+		}
+		
+		h3 {
+			font-family: Ubuntu;
+			font-size: 300%;
+		}
+		
+		p {
+			font-family: Ubuntu;
+			font-size: 250%;
+			word-wrap: break-word;
+			word-break: keep-all;
+		}
+		
+
 	</style>
 	
   <head>
 
 	  <title>New Mini SMB</title>
-</head>
+
+	</head>
 
 	<body>
 
-<h1>Page under construction</h1>
-<p>Save Peach and come back!</p>
+		<div id="navbar"><nav class="container-fluid">
+			<ul>
+				<li>
+					<a href="https://www.nsmbcentral.net/">
+						<img src="https://www.nsmbcentral.net/assets/images/NSMBC-Logo-No-BG.png" alt="NSMBC Logo" style="max-width: 15%">
+					</a>
+				</li>
+			</ul>
+			
+			<ul>
+        <li><a href="https://www.nsmbcentral.net/index.html">Home</a></li>
+        <li><a href="https://www.nsmbcentral.net/mods/">Mods</a></li>
+        <li><a href="https://wiki.nsmbcentral.net">Wiki</a></li>
 
-</body>
+        <li><a href="https://discord.gg/x7gr3M9" role="button">Discord</a></li>
+			</ul>
+		</nav></div>
+
+
+	<br><br>
+
+	<img src=https://raw.githubusercontent.com/NotTheOnlyRph/NSMBC.github.io/refs/heads/main/mods/New%20Mini%20SMB/assets/New%20Mini%20SMB.png alt="New Mini SMB Logo" width="882" height="510">
+	<br><br>
+	
+	<div><h3><i>Consider joining the <a href="https://discord.gg/GgqJFbmkuZ" target="_blank">developement server</a>!</i></h3></div>
+	
+	<div>
+	
+	<h1>About</h1>
+	<p>New Mini SMB is a hack made by Nitro Team. It comes from the revival of <i>Mini Super Mario Bros.</i>, an old hack made by crook, and adds idea from <i>Nitro Super Mario Bros.</i>, an old (and bad) hack made by Rph.
+	<br><br> New Mini SMB is a full 8-world hack that doesn't fully new-ify NSMBDS, offering a new spin on the style used throughout the base game.</p>
+	
+	<br><h1>List of hacks</h1>
+	
+	<p>Custom musics with NitroWAV, spin jump, custom graphics, levels and more !
+	<br><i>Planned: Level intros</i></p>
+	
+	<br><h1>Trailer</h1>
+	
+	<p><i>There is no trailer yet, but it will come soon :)</i></p>
+	
+	<br><h1>Download</h1>
+	
+	<p><b><i>MelonDS users: make sure to enable JIT Recompiler in the emu settings, otherwise it may not work correctly.</i></b>
+	<br><br>The file is an XDelta patch. CLick <a href="https://nsmbhd.net/thread/2382-how-to-import-export-xdelta-patches-tutorial/" target="_blank">here</a> for more info.</p>
+	
+	<a href="https://www.moonsighting.com/dont/don_a.html" target="_blank"><button class="button">No download link yet</button></a>
+	
+	</div>
+	
+	<div><h2>Thank you!</h2>
+	
+	<img src=https://github.com/NotTheOnlyRph/NSMBC.github.io/blob/main/mods/New%20Mini%20SMB/assets/Nitro%20Team%20Logo.png?raw=true alt="Nitro Team" width="1287" height="650">
+	
+	</div>
+
+	</body>
 </html>
