Added download link

--- a/mods/New Mini SMB/index.html
+++ b/mods/New Mini SMB/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+B<!DOCTYPE html>
 <html>
 
 	
@@ -222,7 +222,7 @@
 	<p><b><i>MelonDS users: make sure to enable JIT Recompiler in the emu settings, otherwise it may not work correctly.</i></b>
 	<br><br>The file is an XDelta patch. CLick <a href="https://nsmbhd.net/thread/2382-how-to-import-export-xdelta-patches-tutorial/" target="_blank">here</a> for more info.</p>
 	
-	<a href="https://www.mediafire.com/file/je8zmypckhaeznp/New+Mini+SMB+Build+4+(Patches).zip/file" target="_blank"><button class="button">Download</button></a>
+	<a href="https://www.mediafire.com/file/je8zmypckhaeznp/New+Mini+SMB+Build+4+(Patches).zip/file" target="_blank"><button class="button">Download (Beta build)</button></a>
 	
 	</div>
 	
