--- a/mods/New Mini SMB/index.html
+++ b/mods/New Mini SMB/index.html
@@ -21,7 +21,7 @@
 		}
 
 		.button {
-			background-color: #FFFFFF;
+			background-color: rgba(255, 255, 255, 0.5);
 			border: none;
 			padding: 20px;
 			padding-bottom: 10px;
