--- a/mods_template.html
+++ b/mods_template.html
@@ -47,6 +47,11 @@
     <article>
         <button id="closeDialog">&times;</button>
         <div id="dialogContent"></div>
+        <footer>
+            <button class='outline secondary' id="dialogFooter">
+                Open in new tab
+            </button>
+        </footer>
     </article>
 </dialog>
 
@@ -56,6 +61,7 @@
     document.addEventListener("DOMContentLoaded", function() {
         const dialog = document.getElementById("contentDialog");
         const dialogContent = document.getElementById("dialogContent");
+        const dialogFooter = document.getElementById("dialogFooter");
         const closeDialog = document.getElementById("closeDialog");
 
         document.querySelectorAll(".dialog-link").forEach(link => {
@@ -77,18 +83,21 @@
 
                             dialogContent.innerHTML = contentDiv.innerHTML;
                         } else {
-                            dialogContent.innerHTML = "<p>Error loading content.</p>";
+                            dialogContent.innerHTML = "<p>Error loading content...try opening in a new tab!</p>";
+                            console.log(link.getAttribute("href"));
                         }
 
-                        dialogContent.scrollTop = 0;
+                        dialogFooter.addEventListener("click", function() {window.open(link.getAttribute("href"),'_blank');})
+
                         dialog.showModal();
                     });
             });
         });
 
         closeDialog.addEventListener("click", function() {
-            dialog.close();
+            dialogContent.scrollTop = 0;
             dialogContent.innerHTML = "";  // Clear content when closing
+            dialog.close();
         });
     });
 </script>
