Update New Mini SMB index

--- a/mods/New Mini SMB/index.html
+++ b/mods/New Mini SMB/index.html
@@ -25,7 +25,7 @@
         margin: 4px 2px;
         cursor: pointer;
         border-radius: 12px;
-        font-family: Mario;
+        font-family: Ubuntu;
         font-size: 500%;
         font-family: Mario;
         transition-duration: 0.4s;
@@ -76,6 +76,9 @@
         word-break: keep-all;
     }
 
+    a {
+        color: black;
+    }
 
     .navbar {
         width: 100%;
@@ -162,7 +165,7 @@
      alt="New Mini SMB Logo" width="882" height="510">
 <br><br>
 
-<div><h3><i>Consider joining the <a href="https://discord.gg/GgqJFbmkuZ" target="_blank">developement server</a>!</i>
+<div><h3><i>Consider joining the <a href="https://discord.gg/GgqJFbmkuZ" target="_blank">development server</a>!</i>
 </h3></div>
 
 <div>
@@ -175,9 +178,8 @@
     <br>
     <h1>List of hacks</h1>
 
-    <p>Custom musics with NitroWAV, spin jump, custom graphics, levels and more !
-        <br><i>Planned: Level intros</i></p>
-
+    <p>Custom musics with NitroWAV, level intros, spin jump, custom graphics, levels and more !
+        
     <br>
     <h1>Trailer</h1>
 
