Updated the links

--- a/mods/New Mini SMB/index.html
+++ b/mods/New Mini SMB/index.html
@@ -194,13 +194,13 @@
                 href="https://nsmbhd.net/thread/2382-how-to-import-export-xdelta-patches-tutorial/"
                 target="_blank">here</a> for more info.</p>
 
-    <a href="https://www.mediafire.com/file/je8zmypckhaeznp/New+Mini+SMB+Build+4+(Patches).zip/file" target="_blank">
-        <button class="button">Download (Beta build)</button>
+    <a href="https://www.mediafire.com/file/3ae3deq5yvavhby/New+Mini+SMB+(Build+10).zip/file" target="_blank">
+        <button class="button">Download (Beta)</button>
     </a>
 </div>
 <div><h2>Thank you!</h2>
-    <img src=https://github.com/NotTheOnlyRph/NSMBC.github.io/blob/main/mods/New%20Mini%20SMB/assets/Nitro%20Team%20Logo.png?raw=true
-         alt="Nitro Team" width="1287" height="650">
+    <a href=http://nitro-team.rf.gd><img src=https://github.com/NotTheOnlyRph/NSMBC.github.io/blob/main/mods/New%20Mini%20SMB/assets/Nitro%20Team%20Logo.png?raw=true
+         alt="Nitro Team" width="1287" height="650"></a>
 </div>
 </body>
 </html>
