SO if I can't use Mediafire

--- a/mods/New Mini SMB/index.html
+++ b/mods/New Mini SMB/index.html
@@ -194,7 +194,7 @@
                 href="https://nsmbhd.net/thread/2382-how-to-import-export-xdelta-patches-tutorial/"
                 target="_blank">here</a> for more info.</p>
 
-    <a href="https://www.mediafire.com/file/3ae3deq5yvavhby/New+Mini+SMB+(Build+10).zip/file" target="_blank">
+    <a href="https://github.com/NotTheOnlyRph/New-Mini-SMB/releases" target="_blank">
         <button class="button">Download (Beta)</button>
     </a>
 </div>
