Fixed the button style
Oops...

--- a/mods/New Mini SMB/index.html
+++ b/mods/New Mini SMB/index.html
@@ -195,7 +195,7 @@
                 target="_blank">here</a> for more info.</p>
 
     <a href="https://github.com/NotTheOnlyRph/New-Mini-SMB/releases" target="_blank">
-        <button class="button">Download (Beta)</button>
+        <button class="button" style="font-family:Ubuntu;"><b>Download (Beta)</b></button>
     </a>
 </div>
 <div><h2>Thank you!</h2>
