Add server partners to the website

--- a/nav.html
+++ b/nav.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/mods/">Mods</a></li>
+        <li><a href="/partners.html">Partners</a></li>
         <li><a href="https://wiki.nsmbcentral.net">Wiki</a></li>
         <li><a href="https://discord.gg/x7gr3M9" role="button">Discord</a></li>
     </ul>
