Updated the New Mini SMB page
Added links + Fixed typo + Updated github to my new username

Have fun ndy :)

--- a/mods/New Mini SMB/index.html
+++ b/mods/New Mini SMB/index.html
@@ -190,11 +190,11 @@
 
     <p><b><i>MelonDS users: make sure to enable JIT Recompiler in the emu settings, otherwise it may not work
         correctly.</i></b>
-        <br><br>The file is an XDelta patch. CLick <a
+        <br><br>The file is an <a href="https://www.romhacking.net/utilities/598" target="_blank">XDelta</a> patch. Click <a
                 href="https://nsmbhd.net/thread/2382-how-to-import-export-xdelta-patches-tutorial/"
                 target="_blank">here</a> for more info.</p>
 
-    <a href="https://github.com/NotTheOnlyRph/New-Mini-SMB/releases" target="_blank">
+    <a href="https://github.com/Rph-nsmb/New-Mini-SMB/releases" target="_blank">
         <button class="button" style="font-family:Ubuntu;"><b>Download (Beta)</b></button>
     </a>
 </div>
