Cleaner partners page
Also fix bug with the nav bar

--- a/nav.html
+++ b/nav.html
@@ -89,7 +89,7 @@
     <ul>
         <li>
             <a href="/">
-                <img src="/assets/images/NSMBC-Logo-No-BG.png" alt="NSMBC Logo" style="max-width: 15%">
+                <img src="/assets/images/NSMBC-Logo-No-BG.png" alt="NSMBC Logo" style="width: 60px; height: auto;">
             </a>
         </li>
     </ul>
