--- a/partners.html
+++ b/partners.html
@@ -8,37 +8,100 @@
   <link rel="stylesheet" href="css/styles.css" />
   <title>NSMB Central Partners</title>
   <style>
-    .card {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 1rem;
-      margin: 1rem 0;
+    body {
+      background: linear-gradient(135deg, #1a1a1a 0%, #2a2a2a 100%);
+      background-attachment: fixed;
+      min-height: 100vh;
       display: flex;
-      gap: 1rem;
+      flex-direction: column;
+    }
+    main {
+      flex: 1;
+      padding: 2rem;
+    }
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 2rem;
+      font-family: 'Super Mario DS (Original)', sans-serif;
+      background-image: linear-gradient(#ffffff, #4dabf7);
+      color: transparent;
+      background-clip: text;
+      -webkit-background-clip: text;
+    }
+    .card {
+      background: rgba(30, 30, 30, 0.8);
+      border-radius: 1rem;
+      padding: 1.5rem;
+      margin: 1.5rem 0;
+      display: flex;
+      gap: 1.5rem;
       align-items: center;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.4);
     }
     .pfp {
-      width: 64px;
-      height: 64px;
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
       object-fit: cover;
+      border: 2px solid rgba(77, 171, 247, 0.3);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
     .card-content {
       flex: 1;
     }
     .card h3 {
       margin: 0;
+      color: #4dabf7;
     }
     .card p {
-      margin: 0.5rem 0;
+      margin: 0.75rem 0;
+      color: #e0e0e0;
+      line-height: 1.5;
+    }
+    .card a {
+      display: inline-block;
+      background: rgba(77, 171, 247, 0.7);
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: all 0.2s ease;
+    }
+    .card a:hover {
+      background: rgba(77, 171, 247, 0.85);
+      transform: translateY(-2px);
+    }
+    @media (max-width: 768px) {
+      .card {
+        flex-direction: column;
+        text-align: center;
+        padding: 1rem;
+      }
+      .pfp {
+        width: 64px;
+        height: 64px;
+      }
     }
   </style>
 </head>
 <body>
 <div id="navbar"></div>
-<main class="container">
-  <h1>Server Partners</h1>
-  <div id="partnerList"></div>
+<main>
+  <div class="container">
+    <h1>Server Partners</h1>
+    <div id="partnerList"></div>
+  </div>
 </main>
 
 <script>
