Update the contributing guidelines
Also make the main page and mods page follow the dark theme we have going

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 	<link rel="stylesheet" href="css/styles.css" />
 	<title>NSMB Central</title>
 	<style>
+		body {
+			background: linear-gradient(135deg, #1a1a1a 0%, #2a2a2a 100%);
+			background-attachment: fixed;
+			min-height: 100vh;
+			display: flex;
+			flex-direction: column;
+		}
+
 		/* Add padding to main content when navbar is fixed */
 		#navbar.fixed + main {
 			padding-top: 4rem;
