--- a/mods/index.html
+++ b/mods/index.html
@@ -220,6 +220,10 @@
                 <h2>An Ordinary NSMB Mod</h2>
                 <p>Just an ordinary NSMB DS mod! :)</p>
             </div>
+		     <div class="mod-card" data-href="New++ Super Mario Bros/">
+                <h2>New++ Super Mario Bros</h2>
+                <p>Bowser Jr has one final trial for you made of 80 levels, each with an A side and a B side</p>
+            </div>
         </div>
 
         <section id="contentSection">
