--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/pico.jade.min.css" />
 	<link rel="stylesheet" href="css/styles.css" />
+
+	<!-- Embed -->
+	<meta content="Home - NSMB Central" property="og:title" />
+	<meta content="https://raw.githubusercontent.com/NSMBC/NSMBC.github.io/refs/heads/main/assets/images/gameicon.png" property="og:image" />
+	<meta content="Everything about NSMB modding in NSMB Central!" property="og:description" />
+	<meta content="#00b60f" data-react-helmet="true" name="theme-color" />
+
 	<title>NSMB Central</title>
 	<style>
 		body {
