Add embeds to the other pages

--- a/mods_template.html
+++ b/mods_template.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/pico.jade.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
+    
+    <!-- Embed -->
+    <meta content="Mods - NSMB Central" property="og:title" />
+    <meta content="https://raw.githubusercontent.com/NSMBC/NSMBC.github.io/refs/heads/main/assets/images/NSMB_Central_Logo.png" property="og:image" />
+    <meta content="Here's a list of the mods available on NSMB Central." property="og:description" />
+    <meta content="#00b60f" data-react-helmet="true" name="theme-color" />
+    
     <title>Mods List</title>
     <style>
         body {
