--- a/partners.html
+++ b/partners.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Server Partners</title>
   <link rel="stylesheet" href="css/pico.jade.min.css" />
   <link rel="stylesheet" href="css/styles.css" />
+  
+  <!-- Embed -->
+  <meta content="Partners - NSMB Central" property="og:title" />
+  <meta content="https://raw.githubusercontent.com/NSMBC/NSMBC.github.io/refs/heads/main/assets/images/NSMB_Central_Logo.png" property="og:image" />
+  <meta content="Connect with our partner servers and communities." property="og:description" />
+  <meta content="#00b60f" data-react-helmet="true" name="theme-color" />
+  
   <title>NSMB Central Partners</title>
   <style>
     body {
