--- a/403.html
+++ b/403.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/pico.jade.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    
+    <!-- Embed -->
+    <meta content="403 - Access Forbidden - NSMB Central" property="og:title" />
+    <meta content="https://raw.githubusercontent.com/NSMBC/NSMBC.github.io/refs/heads/main/assets/images/NSMB_Central_Logo.png" property="og:image" />
+    <meta content="You don't have permission to access this page on NSMB Central." property="og:description" />
+    <meta content="#00b60f" data-react-helmet="true" name="theme-color" />
+    
     <title>NSMB Central</title>
     <style>
         body {
