--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- Embed -->
 	<meta content="Home - NSMB Central" property="og:title" />
 	<meta content="https://raw.githubusercontent.com/NSMBC/NSMBC.github.io/refs/heads/main/assets/images/NSMB_Central_Logo.png" property="og:image" />
-	<meta content="Everything about NSMB modding in NSMB Central!" property="og:description" />
+	<meta content="Welcome to NSMB Central, the home of NSMB modding." property="og:description" />
 	<meta content="#00b60f" data-react-helmet="true" name="theme-color" />
 
 	<title>NSMB Central</title>
